<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- generic -->
	    <string name="generic_register">Register</string>
	    <string name="generic_ok">OK</string>
	    <string name="generic_cancel">Cancel</string>
	    <string name="generic_message_register">Register?</string>
	    
	    <string name="generic_message_delete_item">Delete the item?</string>
	    
	    <string name="dlg_reconfirm_genre_name">Genre</string>
	    <string name="generic_confirm">Confirm</string>
	    <string name="generic_label_create">Create</string>
	    <string name="generic_label_all">All</string>
	    <string name="generic_label_choice">Choice</string>
	    <string name="generic_label_update">Update</string>

	    <string name="generic_menu">メニュー</string>
	    <string name="generic_edit">Edit</string>
	    <string name="generic_delete">Delete</string>
	    <string name="generic_upload">Upload</string>
	    <string name="generic_quit_app">Quit app?</string>
    	<string name="generic_notice">Notice</string>
	    	    
    <!-- commmons　-->
    	<string name="commons_import_db_name">ifm11.db</string>
    	<string name="commons_lbl_create_table">Create table</string>
    	<string name="commons_lbl_drop_table">Drop table</string>
    	<string name="commons_lbl_search">Search items</string>
    	<string name="commons_lbl_Delete">Delete</string>
    	<string name="commons_lbl_Sum">Sum</string>
	    
    	
    <string name="hello">Hello World, ShoppingListActivity!</string>
    <string name="app_name">SL3</string>
    <string name="v1_menu_1">Option 1</string>
    <string name="v1_menu_register_item">品物登録</string>
    
    <!-- registeritem.xml -->
	    <string name="v1_tv_item">品名</string>
	    <string name="v1_tv_store">Store</string>
	    <string name="v1_tv_price">価格</string>
	    <string name="v1_tv_genre">ジャンル</string>
	    <string name="v1_tv_yomi">Yomi</string>
	    <string name="v1_tv_num">Num</string>
	    
	    <string name="v1_btn_register">Register</string>
    
    <string name="v1_menu_item_list">品物リスト</string>
    
    <string name="adapteritem_tv_item_name">品物リスト</string>
    <string name="adapteritem_tv_store">品物リスト</string>
    <string name="adapteritem_tv_price">品物リスト</string>
    <string name="v1_menu_register_shop">店舗登録</string>
    <string name="dlg_register_store_ok">登録</string>
    <string name="dlg_register_store_cancel">キャンセル</string>
    <string name="dlg_register_store_message">店舗の名前をどうぞ</string>
    <string name="dlg_register_store_title">店舗登録</string>
    
    <string name="dlg_input_empty_title">Notice</string>
    <string name="dlg_input_empty_message">No input</string>
    <string name="dlg_input_empty_reenter">もう一度入力</string>
    <string name="dlg_input_empty_cancel">取りやめ</string>
    
    <string name="dlg_reconfirm_store_name_title">確認</string>
    <string name="dlg_reconfirm_store_name_label_store_name">店舗名</string>
    <string name="dlg_reconfirm_store_name_message_store_name"></string>
    <string name="dlg_reconfirm_store_name_message_reconfirm">登録してよろしいですか</string>
    <string name="dlg_reconfirm_store_name_ok">よい</string>
    <string name="dlg_reconfirm_store_name_cancel">キャンセル</string>
    <string name="v1_menu_add_genre">ジャンル登録</string>
    
    <string name="dlg_register_genre_message">ジャンルの名前をどうぞ</string>
    <string name="dlg_register_genre_title">ジャンル登録</string>
    
    <string name="db_manager_btn_create_table">テーブル作成</string>
    <string name="db_manager_btn_drop_table">テーブル削除</string>
    
    <!-- menu_main.xml -->
    	<string name="v1_menu_db_manager">データベース</string>
    	<string name="menu_main_tab_actv">TabActv</string>
    	<string name="menu_main_pref_actv">Preference</string>
    	<string name="menu_main_sort_list">Sort list</string>
    
    <!-- db_manager.xml -->
    <string name="dlg_create_table_title">テーブル作成</string>
    <string name="dlg_create_table_label_column_name">カラム名</string>
    <string name="dlg_create_table_label_data_type">データ・タイプ</string>
    <string name="dlg_create_table_label_table_name">テーブル名</string>
    <string name="dlg_drop_table_title">テーブル削除</string>
    <string name="dlg_confirm_drop_table_tv_message_drop">このテーブルを削除しますか？</string>
    
    <!-- ItemList.java: Option menu -->
    	<string name="menu_listitem_filter">フィルター</string>
    	<string name="menu_listitem_tabToBuy_clear_selections">Clear selections</string>
    	<string name="menu_listitem_tabToBuy_admin_db">Admin db</string>
    	<string name="menu_listitem_tabToBuy_admin">Admin</string>
    	
    	<string name="menu_listitem_tabToBuy_clear_basket">Basket</string>
    	<string name="menu_listitem_tabToBuy_clear_checked_items">Checked items</string>
    	<string name="menu_listitem_tabToBuy_lists">Lists</string>
    	<string name="menu_listitem_tabToBuy_db">DB</string>
    	
    	<string name="opt_TabActv_Admin_Main__BackupDB">Backup DB</string>
    	<string name="opt_TabActv_Admin_Main__Operations">Operations</string>
    	<string name="opt_TabActv_Admin_Main__SeeLog">See log</string>
    	<string name="opt_TabActv_Admin_Main__Register_Item">Register item</string>
    
    	<string name="opt_TabActv_Admin_Ops__RestoreDB">Restore DB</string>
    	<string name="opt_TabActv_Admin_Ops__Tables">Tables</string>
    	<string name="opt_TabActv_Admin_Ops__GetYomi">Get Yomi</string>
    	<string name="opt_TabActv_Admin_Ops__PostData">Post data</string>
    	<string name="opt_TabActv_Admin_Ops__UploadDB">Upload DB</string>
    
    	<string name="opt_TabActv_Admin_Tables__Stores_Create">
    	    										stores => create</string>
    	<string name="opt_TabActv_Admin_Tables__Stores_Drop">
    	    										stores => drop</string>
    	<string name="opt_TabActv_Admin_Tables__Genres_Create">
    	    										genres => create</string>
    	<string name="opt_TabActv_Admin_Tables__Genres_Drop">
    	    										genres => drop</string>
    	<string name="opt_TabActv_Admin_Tables__SI_Create">
    	    										shopping_item => create</string>
    	<string name="opt_TabActv_Admin_Tables__SI_Drop">
    	    										shopping_item => drop</string>
    	    										
    	<string name="opt_TabActv_Admin_Tables__PH_Create">
    	    										pur_history => create</string>
    	<string name="opt_TabActv_Admin_Tables__PH_Drop">
    	    										pur_history => drop</string>
    	    										
    	<string name="opt_TabActv_Admin_Tables__Create_PS">
    	    										create => ps</string>
    	<string name="opt_TabActv_Admin_Tables__Drop_PS">
    	    										drop => ps</string>
    	    										
    	<string name="opt_TabActv_Admin_Tables__Create_Admin">
    	    										create => Admin</string>
    	<string name="opt_TabActv_Admin_Tables__Drop_Admin">
    	    										drop => Admin</string>
    	    										
    	<string name="opt_TabActv_Admin_ImportData_Title">
    	    										Import data</string>
    	<string name="opt_TabActv_Admin_ImportData_SI">
    	    										Import data: SI</string>
    	<string name="opt_TabActv_Admin_ImportData_Stores">
    	    										Import data: stores</string>
    	<string name="opt_TabActv_Admin_ImportData_Genres">
    	    										Import data: genres</string>
    	    										
    	<string name="opt_TabActv_Admin_Insert_Num">
    	    										Insert num</string>
    
    	
    	
    	
    <!-- dlg_filter_list.xml -->
    <string name="dlg_filter_list_tv_title">フィルター</string>
    <string name="dlg_filter_list_tv_store">店舗</string>
    <string name="dlg_filter_list_tv_genre">ジャンル</string>
    <string name="dlg_filter_list_tv_history">フィルター履歴</string>

    <!-- shoppinglist.xml -->
    	<string name="sl_tv_item_list">品物リスト</string>
    	<string name="sl_tv_item_register">登録</string>
    	<string name="sl_tv_item_db">データベース</string>
    
    <!-- dlg_register_main.xml -->
    	<string name="dlg_register_main_items">品物</string>
    	<string name="dlg_register_main_stores">店舗</string>
    	<string name="dlg_register_main_genres">ジャンル</string>
    	
    	
    <!-- itemlist.xml -->
    	<string name="itemlist_bt_choose">確定</string>
    	<string name="itemlist_bt_see_chosen">見る</string>
    
    <!-- dlg_db_admin.xml -->
	    <string name="dlg_db_admin_title">DB Admin</string>
	    <string name="dlg_db_admin_item_backup_db">Backup DB</string>
	    <string name="dlg_db_admin_item_refresh_db">DBリフレッシュ</string>
	    <string name="dlg_db_admin_item_refatcor_db">Refactor DB</string>
	    <string name="dlg_db_admin_item_restore_db">Restore db</string>
	    <string name="dlg_db_admin_item_get_yomi">Get Yomi data</string>
	    <string name="dlg_db_admin_item_post_data">Post data</string>
    
	<!-- preferences.xml -->
		<string name="prefs_title_bgm">BGM on</string>
		<string name="prefs_key_bgm">pref_bgm</string>
	
	<!-- SharedPreferencesName -->
		<string name="shared_preferences_name">preferences</string>
    
	<!-- List: lvTab2 -->
		<string name="tabactv_tab2_lv_title">Admin list view</string>
		<string name="tabactv_tab2_lv_delete_from_list">Delete from list</string>
		
	<!-- TabActv.java -->
		<string name="tabactv_tabtags_first">First</string>
		<string name="tabactv_tabtags_second">Second</string>
		
	<!-- menu_listitem_tabToBuy_admin_db -->
		<string name="menu_listitem_tabToBuy_admin_db_save_tobuy_list">
		    		Save to-buy list</string>
		<string name="menu_listitem_tabToBuy_admin_db_load_tobuy_list">
		    		Load to-buy list</string>
		<string name="menu_listitem_tabToBuy_admin_db_delete_tobuy_list">
		    		Delete to-buy list</string>
		    		
		<string name="menu_listitem_tabToBuy_admin_db_post_tobuy_list">
		    		Post to-buylist</string>
		<string name="menu_listitem_tabToBuy_admin_db_post_Stores">
		    		Post stores</string>
		    		
		<string name="menu_listitem_tabToBuy_admin_db_post_Genres">
		    		Post genres</string>
		    		
		<string name="menu_listitem_tabToBuy_admin_db_post_Sis">
		    		Post sis</string>
		    		
		<string name="menu_listitem_tabToBuy_admin_db_save_hist">
		    		Save pur history</string>
		
	<!-- dlg_save_tobuy_list.xml -->
		<string name="dlg_save_tobuy_list_scheduled_date">予定日</string>	
		<string name="dlg_save_tobuy_list_store_name">店名</string>
		<string name="dlg_save_tobuy_list_amount">金額</string>
		<string name="dlg_save_tobuy_list_memo">メモ</string>
		
	<!-- itemlist_tabs.xml -->
		<string name="itemlist_tabs_tobuy_sum">合計</string>
		<string name="itemlist_tabs_tobuy_sum_initial">0 円</string>
		
	<!-- dlg_edit_items.xml -->
		<string name="dlg_edit_items_title">Edit items</string>
		
	<!-- dlg_sort_list.xml -->
		<string name="dlg_sort_list_title">Sort by</string>
		<string name="dlg_sort_list_item_name">Item name</string>
		<string name="dlg_sort_list_genre">Genre</string>
		<string name="dlg_sort_list_store">Store</string>
		
		<string name="dlg_sort_list_genre_item_name">Genre/Item name</string>
		<string name="dlg_sort_list_store_item_name">Store/Item name</string>
		<string name="dlg_sort_list_store_genre_item_name">Store/Genre/Item name</string>
	
	<!-- Dialog: Tab1, item list, long click -->
		<string name="dlg_item_list_long_click_edit">Edit</string>
		<string name="dlg_item_list_long_click_delete">Delete</string>
		
	<!-- Dialog: Upload boutght items -->
		<string name="dlg_post_bought_items_message">Upload bought items?</string>
		
	<!-- contentDescription -->
		<string name="cd_actv_tab_ib_down">scroll down the list</string>
		<string name="cd_actv_tab_ib_up">scroll up the list</string>
		<string name="cd_actv_tab_ib_top">scroll up to the top of the list</string>
		<string name="cd_actv_tab_ib_bottom">scroll down to the bottom of the list</string>
	
	<!-- Tab 2: option menu -->
		<string name="dlg_Tab2_Lists__Title">Lists</string>
		<string name="dlg_Tab2_Lists__Sort">Sort</string>
		<string name="dlg_Tab2_Lists__Clear">Clear</string>
		
</resources>