<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/actv_tab_1_search"
		android:icon="@drawable/general_ib_ball_yellow_48x48"
		android:title="@string/commons_lbl_search"
		
		android:orderInCategory="2"
		>
        
    </item>

    <item
        android:id="@+id/actv_tab_1_clear_selections"
		android:icon="@drawable/sl_basket_empty_35x35"
		android:title="@string/menu_listitem_tabToBuy_clear_selections"
		
		android:orderInCategory="2"
		>
        
    </item>

    <item
        android:id="@+id/actv_tab_1_admin_db"
		android:icon="@drawable/sl_db_item_35x35"
		android:title="@string/menu_listitem_tabToBuy_admin"
		
		android:orderInCategory="2"
		>
        
    </item>
    
    <item
        android:id="@+id/actv_tab_1_sort_list"
		android:icon="@android:drawable/ic_menu_sort_alphabetically"
		android:title="@string/menu_main_sort_list"
		
		android:orderInCategory="2"
		>
        
    </item>
    
</menu>