<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/dlg_save_pur_history_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="8dp" >
        
		<TableRow android:layout_marginBottom="3dp" >

	        <TextView
	            android:id="@+id/dlg_save_pur_history_tv_store"
	            style="@style/tv_basic_1" 
	            android:text="@string/v1_tv_store"
	            />
	
	        <Spinner
	            android:id="@+id/dlg_save_pur_history_sp_store"
	            
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            
	            android:textSize="25sp"
	            
	            android:layout_weight="1" 
	            />
		</TableRow>

	    <TableRow android:layout_marginBottom="3dp" >
	
	        <TextView
	            android:id="@+id/dlg_save_pur_history_tv_price"
	            style="@style/tv_basic_1"
	            android:text="@string/commons_lbl_Sum" />
	
	        <EditText
	            android:id="@+id/dlg_save_pur_history_et_price"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:minWidth="200dp"
	            android:textSize="25sp" 
	            
	            android:inputType="number"
	            />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="3dp" >

	        <TextView
	            android:id="@+id/dlg_save_pur_history_tv_num"
	            style="@style/tv_basic_1"
	            android:text="@string/v1_tv_num" />

	        <EditText
	            android:id="@+id/dlg_save_pur_history_et_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:textSize="25sp" >

	            <requestFocus />
	        </EditText>

	    </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="4dp" >

        <Button
            android:id="@+id/dlg_save_pur_history_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:text="@string/generic_ok"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dlg_save_pur_history_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:text="@string/generic_cancel"
            android:textColor="@color/red"
            android:textSize="25sp" />

    </LinearLayout>    
</LinearLayout>